fix times up display on mobile

--- a/frontend/src/styles/grids.scss
+++ b/frontend/src/styles/grids.scss
@@ -109,7 +109,7 @@
             @media screen and (max-width: 430px) {
               padding: 5px;
               text-wrap: nowrap;
-              width: fit-content;
+              width: 150px;
             }
           }
         }
